# lab123project

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/lab1project/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/lab1project/: MainActivity.java  PinpadActivity.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/lab1project/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
